# min-mozhi

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  Agents.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_NOTES.md  ROADMAP.md  bench-history.jsonl  build.rs  case_suffixes.toml  keywords.toml  messages.toml  min-mozhi-roadmap.md  pyproject.toml
.agents/: Rules.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.opencode/plans/: showcase-demos.md
benches/: compile.rs
crates/mimz-core/: Cargo.toml
crates/mimz-sim/: Cargo.toml
crates/mimz-wasm/: Cargo.toml  README.md  smoke-test.cjs  test.html
crates/mimz-wasm/src/: lib.rs
demo/: .gitignore  README.md  alu.mimz  cpu.mimz
docs/: BUILD.md  README.md  RULES.md  architecture.md  how-the-compiler-works.md  prior-art.md
docs/Ideas/: architectural_ideas.md  benchmark_plan.md  ci_plan.md  hardware_emulation.md  language_plan.md  simulator_ideas.md
docs/archive/: open-questions-2026-06-10.md
docs/audit/: README.md  bugs.md  hardening.md  review-2026-07-03.md  review-2026-07-17.md  security.md
docs/code/: 01-pipeline.md  02-lexer.md  03-parser.md  04-ast.md  05-emit-verilog.md  06-diagnostics.md  07-decisions-and-evolution.md  08-contributing.md  09-walkthrough-counter.md  10-test-map.md  11-checker.md  12-benchmark.md  13-tooling.md  14-hardware-emulation.md  README.md
docs/guide/: 01-getting-started.md  02-lexical-basics.md  03-types-and-values.md  04-signals.md  05-operators.md  06-builtins.md  07-expressions-and-control.md  08-sequential-logic.md  09-modules-and-reuse.md  10-word-order-thamizh.md  11-toolchain.md  12-cheatsheet.md  13-hardware-emulation.md  README.md
docs/log/: 2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  (+2 more)
docs/plan/: phase-0-foundation.md  phase-1-verilog-backend.md  phase-1.5-simulator.md  phase-1.8-grammar-engine.md  phase-2-differential-fuzzing.md  phase-2-ir-synthesis.md  phase-3-native-backend.md  phase-4-ecosystem.md  phase-4-web-presence.md
docs/source-guide/: 01-overview.md  02-foundations.md  03-lexer.md  04-parser.md  05-ast.md  06-checker.md  07-verilog-emitter.md  08-simulator.md  09-tooling-and-entry.md  10-ecosystem.md  11-hardware-emulation.md  README.md
editors/vscode/: .vscodeignore  LICENSE.md  README.md  extension.js  language-configuration.json  mimz-0.1.0.vsix  package.json
examples/: README.md  counter.mimz  counter.tanglish.mimz
examples/english/: adder.mimz  alu.mimz  async_reset.mimz  bitops.mimz  blinker.mimz  bundle_passthrough.mimz  chained.mimz  comparator.mimz  datapath.mimz  debug_wrapper.mimz  dual_edge.mimz  edge_detector.mimz  enum_construct.mimz  fn_array_search.mimz  fn_const_local.mimz  fn_mac.mimz  fn_mac_local.mimz  fn_return_guard.mimz  fn_with_const.mimz  foreach_fill.mimz  foreach_sum.mimz  mux4.mimz  priority.mimz  pulse_gen.mimz  regfile.mimz  replicate.mimz  ripple_adder.mimz  shift.mimz  shift_register.mimz  signed_math.mimz  sync_double_flop.mimz  sync_loop_search.mimz  sync_pulse.mimz  tagged_packet.mimz  tested_adder.mimz  traffic_light.mimz  vilakku.mimz  window.mimz
examples/mixed/: adder.mimz  alu.mimz  async_reset.mimz  bitops.mimz  blinker.mimz  chained.mimz  comparator.mimz  counter.mimz  datapath.mimz  debug_wrapper.mimz  dual_edge.mimz  edge_detector.mimz  enum_construct.mimz  fn_array_search.mimz  fn_const_local.mimz  fn_mac.mimz  fn_mac_local.mimz  fn_return_guard.mimz  fn_with_const.mimz  foreach_fill.mimz  foreach_sum.mimz  mux4.mimz  priority.mimz  pulse_gen.mimz  regfile.mimz  replicate.mimz  ripple_adder.mimz  shift.mimz  shift_register.mimz  signed_math.mimz  sync_double_flop.mimz  sync_loop_search.mimz  sync_pulse.mimz  tagged_packet.mimz  tested_adder.mimz  traffic_light.mimz  vilakku.mimz  window.mimz
examples/tamil/: adder.mimz  alu.mimz  async_reset.mimz  bitops.mimz  blinker.mimz  bundle_passthrough.mimz  chained.mimz  comparator.mimz  counter.mimz  (+30 more)
examples/tamil-pure/: anuppi.mimz  bundle_passthrough.mimz  cimitti.mimz  ennkaatti.mimz  fn_array_search.mimz  fn_return_guard.mimz  kanakki.mimz  kootu.mimz  kuutti.mimz  minukki.mimz  nakartthi.mimz  nilaippaduthi.mimz  oppidi.mimz  perukki.mimz  saalaivilakku.mimz  sirappu_pothi.mimz  sync_loop_search.mimz  tested_kuutti.mimz  thervi.mimz  varisai.mimz
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lex_parse_compile.rs  lex_parse_eval.rs  pretty_roundtrip.rs  translate_roundtrip.rs
lang/: keywords.toml
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
spec/: 01-goals-and-philosophy.md  02-syntax-and-grammar.md  03-keywords-trilingual.md  04-grammar-engine.md  05-simulator.md  06-editions.md  README.md
src/: analysis.rs  config.rs  diag.rs  explain.rs  lib.rs  lint.rs  lsp.rs  main.rs  morph.rs  pretty.rs  project.rs  runner.rs  span.rs  stdlib.rs  translate.rs  version.rs
tests/: cli.rs  compile_string.rs  config.rs  differential_fuzz.rs  docs_sync.rs  errors.rs  eval.rs  examples.rs  extern.rs  fmt.rs  grammar.rs  grammar_sync.rs  icarus.rs  lsp.rs  morph.rs  packages.rs  self_determined_regression.rs  showcase.rs  sim.rs  stdlib.rs  test_run.rs  translate.rs  wasm_parity.rs
tools/test-summary/: Cargo.toml
tools/test-summary/src/: main.rs
(+533 files in other folders)
