[package]
name = "mimz"
version = "0.1.0-dev"
edition = "2024"
description = "Min-Mozhi (மின்மொழி) — a modern, safe-by-default HDL and the first Tamil-rooted one. Reads like Go/TypeScript, safe like Rust, speaks English, Tanglish, and Tamil; built to help students learn digital design."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Naveen2070/min-mozhi"
keywords = ["hdl", "hardware", "verilog", "fpga", "tamil"]
categories = ["compilers", "hardware-support"]
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-ident = "1"
unicode-normalization = "0.1"
# LSP server (`mimz lsp`, bin-only module — the lib itself stays
# async-free so the Phase 4 WASM build never meets tokio).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20"

[profile.release]
lto = true
